# Pinpoint

./: SO101training.usd  ik_goto_pose_final.py
ws2/install/: local_setup.sh  setup.sh
ws2/install/isaac_bridge/lib/isaac_bridge/: joint_state_relay
ws2/install/isaac_bridge/share/isaac_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws2/install/my_robot_description/share/my_robot_description/: local_setup.sh  package.sh  package.xml
ws2/install/my_robot_description/share/my_robot_description/meshes/: base_visuals_sts3215_03a_v1_mesh.mtl  so101_new_calib_gripper_visuals_wrist_roll_follower_so101_v1_mesh.mtl
ws2/install/my_robot_description/share/my_robot_description/urdf/: so101ws2.urdf
ws2/install/ws2_config/share/ws2_config/: .setup_assistant  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws2/install/ws2_config/share/ws2_config/config/: SO101.urdf.xacro
ws2/install/ws2_config/share/ws2_config/launch/: demo.launch.py  rsp.launch.py  setup_assistant.launch.py
ws2/log/: latest_build
ws2/src/isaac_bridge/: setup.cfg  setup.py
ws2/src/isaac_bridge/isaac_bridge/: joint_state_relay.py
ws2/src/my_robot_description/: CMakeLists.txt
ws2/src/ws2_config/: CMakeLists.txt
ws2/src/ws2_config/config/: SO101.ros2_control.xacro  SO101.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
ws2/src/ws2_config/launch/: move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
