<?xml version="1.0"?>
<package format="3">
  <name>isaac_bridge</name>
  <version>0.0.0</version>
  <description>Relay joint states to Isaac Sim</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
